exports[`Storyshots EducationLevel with none selected 1`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          EducationLevel
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          with none selected
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <label
          htmlFor="education-level-education_level">
          Education level:
        </label>
        <dl
          className="dropdown"
          id="education-level-education_level">
          <dt>
            <a
              aria-expanded="false"
              className=""
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button">
              <span
                className="eduSelect">
                Select
                <span
                  className="sr-only">
                   to reveal Education Level options
                </span>
              </span>
            </a>
          </dt>
          <dd>
            <div
              className="multiSelect">
              <fieldset>
                <legend
                  className="sr-only">
                  Education level:
                </legend>
              </fieldset>
            </div>
          </dd>
        </dl>
      </div>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div
            style={
              Object {
                "paddingLeft": 18,
                "paddingRight": 3,
              }
            }>
            <span
              style={
                Object {
                  "color": "#777",
                }
              }>
              <
              EducationLevel
            </span>
            <span>
              <span>
                 
                <span
                  style={Object {}}>
                  levels
                </span>
                <span>
                  =
                  <span
                    style={Object {}}>
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }>
                        [
                        ]
                      </span>
                      }
                    </span>
                  </span>
                </span>
              </span>
              <span>
                 
                <span
                  style={Object {}}>
                  toggleEducationLevel
                </span>
                <span>
                  =
                  <span
                    style={Object {}}>
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }>
                        toggled()
                      </span>
                      }
                    </span>
                  </span>
                </span>
                 
              </span>
            </span>
            <span
              style={
                Object {
                  "color": "#777",
                }
              }>
              />
            </span>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            EducationLevel
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  idPrefix
                </td>
                <td>
                  string
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }>
                    \"
                    education-level-
                    \"
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  levels
                </td>
                <td>
                  array
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  toggleEducationLevel
                </td>
                <td>
                  func
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EducationLevel with one selected 1`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          EducationLevel
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          with one selected
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <label
          htmlFor="education-level-education_level">
          Education level:
        </label>
        <dl
          className="dropdown"
          id="education-level-education_level">
          <dt>
            <a
              aria-expanded="false"
              className="filter_active"
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button">
              <div
                className="multiSel">
                <span
                  title="High School">
                  High School
                </span>
              </div>
            </a>
          </dt>
          <dd>
            <div
              className="multiSelect">
              <fieldset>
                <legend
                  className="sr-only">
                  Education level:
                </legend>
              </fieldset>
            </div>
          </dd>
        </dl>
      </div>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div
            style={
              Object {
                "paddingLeft": 18,
                "paddingRight": 3,
              }
            }>
            <span
              style={
                Object {
                  "color": "#777",
                }
              }>
              <
              EducationLevel
            </span>
            <span>
              <span>
                 
                <span
                  style={Object {}}>
                  levels
                </span>
                <span>
                  =
                  <span
                    style={Object {}}>
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }>
                        [
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }>
                          \"
                          HS
                          \"
                        </span>
                        ]
                      </span>
                      }
                    </span>
                  </span>
                </span>
              </span>
              <span>
                 
                <span
                  style={Object {}}>
                  toggleEducationLevel
                </span>
                <span>
                  =
                  <span
                    style={Object {}}>
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }>
                        toggled()
                      </span>
                      }
                    </span>
                  </span>
                </span>
                 
              </span>
            </span>
            <span
              style={
                Object {
                  "color": "#777",
                }
              }>
              />
            </span>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            EducationLevel
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  idPrefix
                </td>
                <td>
                  string
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }>
                    \"
                    education-level-
                    \"
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  levels
                </td>
                <td>
                  array
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  toggleEducationLevel
                </td>
                <td>
                  func
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip always showing 1`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          Tooltip
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          always showing
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <span>
        This text will have a permanently visible tooltip.
      </span>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
            }
          }>
          This can be useful if you need external state or code to
          control when the tooltip shows.
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Tooltip
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        I am always showing!
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    show
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                This text will have a permanently visible tooltip.
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                Tooltip
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            Tooltip
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  any
                </td>
                <td>
                  no
                </td>
                <td>
                  <span>
                    {
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }>
                      null
                    </span>
                    }
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  show
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  <span>
                    {
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }>
                      false
                    </span>
                    }
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  text
                </td>
                <td>
                  string
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip showing on focus/hover 1`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          Tooltip
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          showing on focus/hover
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <span>
        <a
          aria-label="Hello, I am a tooltip!"
          href=""
          onClick={[Function]}>
          Here is a keyboard-focusable tooltip.
        </a>
      </span>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
            }
          }>
          The tooltip automatically shows and hides itself on focus
          and blur events, so wrapping a focusable element in a tooltip
          keeps things accessible for keyboard users.
        </p>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
            }
          }>
          This is not actually very friendly to screen reader users
          because ATs will still identify the element as a link, but
          it’s better than nothing.
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Tooltip
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        Hello, I am a tooltip!
                        \"
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  a
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      href
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }>
                          \"
                          
                          \"
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      aria-label
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }>
                          \"
                          Hello, I am a tooltip!
                          \"
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      onClick
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }>
                            onClick()
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  Here is a keyboard-focusable tooltip.
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  a
                  >
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                Tooltip
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            Tooltip
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  any
                </td>
                <td>
                  no
                </td>
                <td>
                  <span>
                    {
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }>
                      null
                    </span>
                    }
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  show
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  <span>
                    {
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }>
                      false
                    </span>
                    }
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  text
                </td>
                <td>
                  string
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
